Steps 1-6 out of 9 complete

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app='superheroesApp'>
 <head>
   <meta charset="UTF-8">
   <title>Superhero Phone Book</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="app.js"></script>
+</head>
+  <div>
+    <input type="text" ng-model="vm.newSuperhero.name">
+    <input type="text" ng-model="vm.newSuperhero.number">
+    <input type="text" ng-model="vm.newSuperhero.group">
+    <input type="text" ng-model="vm.newSuperhero.img">
+    <button ng-click="vm.addSuperhero()">Add Superhero</button>
+  </div>
+<body ng-controller="SuperheroController as vm">
+  <div ng-repeat="superhero in vm.superhero">
+     <p>{{$index + 1}}. {{superhero.name}} </p>
+   </div>
 </body>
 </html>
