--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="app.js"></script>
 </head>
+<div>
+  <h1>Search</h1>
+  <input type="text" ng-model="searchText">
+</div>
+<hr>
   <div>
     <input type="text" ng-model="vm.newSuperhero.name">
     <input type="text" ng-model="vm.newSuperhero.number">
@@ -15,8 +20,11 @@
     <button ng-click="vm.addSuperhero()">Add Superhero</button>
   </div>
 <body ng-controller="SuperheroController as vm">
-  <div ng-repeat="superhero in vm.superhero">
-     <p>{{$index + 1}}. {{superhero.name}} </p>
+  <div ng-repeat="superhero in vm.superhero | filter: searchText" ng-class= "superhero.group.toLowerCase()">
+    <p>{{superhero.name}} </p>
+    <p>{{superhero.number}}</p>
+    <p>{{superhero.group}}</p>
+    <img src="{{superhero.img}}" alt="super hero" height="60px" width="60px">
    </div>
 </body>
 </html>
